--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "prettier:format": "prettier --config .prettierrc 'src/**/*.tsx' --write"
   },
   "dependencies": {
+    "axios": "^1.2.3",
+    "dotenv": "^16.0.3",
     "react": "^18.2.0",
     "react-dom": "^18.2.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
+    "@types/node": "^18.11.18",
     "@types/react": "^18.0.26",
     "@types/react-dom": "^18.0.9",
     "@typescript-eslint/eslint-plugin": "^5.48.2",
