--- a/package.json
+++ b/package.json
@@ -17,7 +17,8 @@
     "axios": "^1.2.3",
     "dotenv": "^16.0.3",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.7.0"
   },
   "devDependencies": {
     "@babel/core": "^7.20.12",
