--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
     "prettier:format": "prettier --config .prettierrc 'src/**/*.tsx' --write"
   },
   "dependencies": {
-    "axios": "^1.2.3",
+    "axios": "^1.2.6",
+    "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
+    "form-data": "^4.0.0",
     "react": "^18.2.0",
+    "react-dayjs": "^0.3.2",
     "react-dom": "^18.2.0",
+    "react-hook-form": "^7.43.0",
     "react-router-dom": "^6.7.0",
     "recoil": "^0.7.6"
   },
