--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "dayjs": "^1.11.7",
     "dotenv": "^16.0.3",
     "form-data": "^4.0.0",
+    "js-file-download": "^0.4.12",
     "react": "^18.2.0",
     "react-dayjs": "^0.3.2",
     "react-dom": "^18.2.0",
