--- a/package.json
+++ b/package.json
@@ -8,10 +8,8 @@
     "build": "tsc && vite build",
     "preview": "vite preview",
     "lint": "eslint . --ext .ts --ext .tsx",
-    "storybook": "start-storybook -p 6006",
-    "build-storybook": "build-storybook",
     "prettier": "prettier --config .prettierrc 'src/**/*.tsx' --check",
-    "prettier:format": "prettier --config .prettierrc 'src/**/*.tsx' --write"
+    "prettier:format": "prettier --config .prettierrc 'src/**/*.ts*' --write"
   },
   "dependencies": {
     "axios": "^1.2.6",
@@ -39,6 +37,7 @@
     "eslint-config-airbnb-typescript": "^17.0.0",
     "eslint-plugin-import": "^2.27.5",
     "eslint-plugin-prettier": "^4.2.1",
+    "prettier": "^2.8.3",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
